syntax = "proto3";

import "lib.proto";

package auth;

service AuthService {
  rpc LoginUser (LoginUserRequest) returns (User) {}
  rpc RegisterUser (RegisterUserRequest) returns (User) {}
  rpc Verifyuser (VerifyUserRequest) returns (lib.Empty) {}
  rpc Authenticate (AuthRequest) returns (User) {}
}

message LoginUserRequest {
  optional string pin = 1;
  optional string phone = 2;
  optional string npub = 3;
}

message RegisterUserRequest {
  string pin = 1;
  optional string phone = 2;
  optional string npub = 3;
  repeated Role roles = 4;
}

message VerifyUserRequest {
  optional string phone = 1;
  optional string npub = 2;
  optional string otp = 3;
}

message AuthRequest {
  string token = 1;
}

message User {
  string id = 1;

  reserved 2, 3, 4, 5, 6;

  optional Phone phone = 7;

  optional Nostr nostr = 8;

  optional Profile profile = 9;

  repeated Role roles = 10;
}

message Phone {
  string number = 1;
  bool verified = 2;
}

// Users nostr identifier
message Nostr {
  string npub = 1;
  bool verified = 2;
}

message Profile {
  // Users name or nym
  optional string name = 1;
  // Users avatar url
  optional string avatar_url = 2;
}

enum Role {
  Member = 0;
  Admin = 1;
  SuperAdmin = 3;
}
